force-app/main/default/objects/SalesforceProject__c/SalesforceProject__c.object-meta.xml
<CustomObject>
    <description>Deprecation. Need to delete object. There are several dependencies that need updating

For SaleForce Development team to monitor and prioritize SalesForce Projects.</description>
    <label>Salesforce Project</label>
    <nameField>
        <label>Salesforce Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>