force-app/main/default/objects/SalesforceProject__c/fields/Currently_Working__c.field-meta.xml
<CustomField>
    <fullName>Currently_Working__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Working</label>
    <type>Checkbox</type>
</CustomField>