force-app/main/default/objects/SalesforceProject__c/fields/EstCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>EstCompletionDate__c</fullName>
    <label>Est Completion Date</label>
    <type>Date</type>
</CustomField>