force-app/main/default/objects/SalesforceProject__c/fields/Estimated_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Business_Days__c</fullName>
    <label>Estimated Business Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>