force-app/main/default/objects/SalesforceProject__c/fields/EstStartDate__c.field-meta.xml
<CustomField>
    <fullName>EstStartDate__c</fullName>
    <label>Est Start Date</label>
    <type>Date</type>
</CustomField>