force-app/main/default/objects/SalesforceProject__c/fields/PriorityLevel__c.field-meta.xml
<CustomField>
    <fullName>PriorityLevel__c</fullName>
    <label>Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Med</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>