force-app/main/default/objects/SalesforceProject__c/fields/Project_Step__c.field-meta.xml
<CustomField>
    <fullName>Project_Step__c</fullName>
    <label>Current Step</label>
    <length>250</length>
    <type>Text</type>
</CustomField>