force-app/main/default/objects/SalesforceProject__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Salesforce Projects</relationshipLabel>
    <relationshipName>Salesforce_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>