force-app/main/default/objects/SalesforceProject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>CompletionDate__c</columns>
    <columns>EstStartDate__c</columns>
    <columns>StartDate__c</columns>
    <columns>EstCompletionDate__c</columns>
    <columns>Status__c</columns>
    <columns>Requestor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PriorityLevel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SalesforceProject__c.Standard</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All</label>
</ListView>