force-app/main/default/objects/SalesforceProject__c/listViews/OutstandingProjects.listView-meta.xml
<ListView>
    <fullName>OutstandingProjects</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Completed__c</columns>
    <columns>Project_Step__c</columns>
    <columns>Estimated_Business_Days__c</columns>
    <columns>CompletionDate__c</columns>
    <columns>EstStartDate__c</columns>
    <columns>StartDate__c</columns>
    <columns>Requestor__c</columns>
    <columns>Notes__c</columns>
    <columns>Currently_Working__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SalesforceProject__c.Standard</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>On Hold,Completed,Canceled,Converted,Merged</value>
    </filters>
    <label>1. Outstanding</label>
</ListView>